--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.0.6",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
+    "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "rxjs": "^7.5.6",
