--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular/animations": "^14.0.6",
     "@angular/cdk": "^14.0.5",
-    "@angular/common": "^14.0.6",
+    "@angular/common": "^13.0.0",
     "@angular/compiler": "^14.0.6",
     "@angular/core": "^14.0.6",
     "@angular/forms": "^14.0.6",
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "^7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "^0.11.6"
