--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "golive":"lt --port 4201"
   },
   "private": true,
   "dependencies": {
@@ -30,7 +31,8 @@
     "ngx-toastr": "^15.0.0",
     "rxjs": "^7.5.6",
     "tslib": "^2.4.0",
-    "zone.js": "^0.11.6"
+    "zone.js": "^0.11.6",
+    "localtunnel":"^2.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.0",
